# SCARA-system_wtLightning

./: .gitignore
hmi/: CMakeLists.txt
hmi/src/: main.cpp
hmi/ui/: Main.qml
